<resources>
    <string name="app_name">Person Information Manager</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="teacher_tab_header_text">Teacher</string>
    <string name="student_tab_header_text">Student</string>

    <string name="student_name_label_text">Name : </string>
    <string name="student_age_label_text">Age : </string>
    <string name="student_gpa_label_text">Average Grade Marks :</string>
    <string name="student_assoc_no_label_text">Association No :</string>

    <string name="teacher_name_label_text">Name : </string>
    <string name="teacher_age_label_text">Age : </string>
    <string name="teacher_highest_edu_qual_label_text">Highest Education Qualification :</string>

    <string name="teacher_data_input_label_text">Enter New Teacher Information</string>
    <string name="student_data_add_label_text">Enter New Student Information</string>

    <string name="student_data_modify_input_label_text">Modify Student Information</string>
    <string name="teacher_modify_data_input_label_text">Modify Teacher Information</string>

    <string name="button_add_student_info_action_text">Add Record</string>
    <string name="button_add_student_info_cancel_text">Cancel</string>

    <string name="button_add_teacher_info_action_text">Add Record</string>
    <string name="button_add_teacher_info_cancel_text">Cancel</string>

    <string name="button_delete_student_info_action_text">Delete</string>
    <string name="button_update_student_info_action_text">Confirm</string>

    <string name="button_delete_teacher_info_action_text">Delete</string>
    <string name="button_update_teacher_info_action_text">Confirm</string>

    <string name="view_person_delete_confirm_dialog_title">Confirm</string>
    <string name="view_person_delete_confirm_dialog_message">This will remove the record from the system. Are you sure?</string>
    <string name="view_person_delete_confirm_dialog_positive_button_text">Yes</string>
    <string name="view_person_delete_confirm_dialog_negative_button_text">No</string>
</resources>
